@@ -1,8 +1,14 @@
 main-menu (1.03) UNRELEASED; urgency=low
 
+  NOTE: Not for sarge.
   * Petter Reinholdtsen
     - Improve the handling of errors when debconf priority limit is
       set to critical.  Patch from Colin Watson. (Closes: 268425)
+  * Colin Watson
+    - Add support for executables in /lib/main-menu.d/, which get run at
+      main-menu startup. This allows packages to run scripts that need to
+      share main-menu's debconf frontend but that don't merit a menu item,
+      such as setting an info message.
 
  -- Petter Reinholdtsen <pere@debian.org>  Sun, 30 Jan 2005 12:01:38 +0100
 
